<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">DrinkLog</string>
	
   	<string name="whiskey">Whiskey</string>
	<string name="cocktail">Cocktail</string>
	<string name="wine">Wine</string>
	<string name="shochu">Shochu</string>
	<string name="japanese_sake">Japanese Sake</string>
	<string name="brandy">Brandy</string>
	<string name="beer">Beer</string>
	<string name="other">Other</string>
	    
    <string name="register">Register</string>
    <string name="refer">Reference</string>
	<string name="finish">Close application</string>
	<string name="finish_confirm">Close?</string>         
	<string name="ok">Yes</string>         
	<string name="ng">Cancel</string>        
	<string name="cancel">Cancel</string>
	<string name="register_title">Title</string>
	<string name="submit">Submit</string>
	<string name="register_warning">Warning</string>
	<string name="input_request">Please input one character or more at name</string>
	    
	<string name="dialog_category">Select category</string>
	<string name="dialog_image">Select image</string>
   	<string name="dialog_progress">under registering</string>
   	<string name="dialog_notify_title">Notify</string>
	<string name="dialog_notify">Registered</string>

	<string name="name">Name</string>
	<string name="vintage">Year</string>
    <string name="year">year</string>
   	<string name="area">Area(Category)</string>
   	<string name="type">Type</string>
    <string name="image">Image</string>
	<string name="user_canceled">Canceled</string>
	<string name="get_image_error">Error</string>
   	<string name="date">Date</string>
	<string name="date_select">Select</string>
	<string name="place">Place(Shop)</string>
	<string name="price">Price</string>
	<string name="evaluate">Score</string>
    <string name="impression">Impression</string>
	<string name="register_commit">Register</string>
	<string name="register_cancel">Cancel</string>
	<string name="cancel_confirm_title">Confirm</string>
	<string name="cancel_confirm">Discard?</string>
	<string name="other_item">Show other items</string>
	
	<string name="list_tab_date">Date</string>
	<string name="list_tab_category">Category</string>
   	<string name="list_alert_select">Select</string>
	<string name="list_alert_confirm">Delete?</string>
	
   	<string name="ref_no_comment">No comment</string>
	<string name="ref_other_log">Show other logs</string>
	<string name="ref_no_setting">No setting</string>
	<string name="ref_tweet">Tweet</string>
	
	<string name="menu_settings">Settings</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_share">Tweet</string>
	<string name="tweet">Tweet</string>
	<string name="tweet_finish">Tweet finished</string>
	<string name="tweet_error">Tweet error occured</string>
	<string name="tweet_nw_error">Network error</string>

	<string name="pref_tweet">Twitter settings</string>
	<string name="pref_tweet_image">Image attaching</string>
	<string name="pref_tweet_image_summary">Image attaching when tweet</string>
  	<string name="pref_tweet_auto">Auto tweet</string> 
  	<string name="pref_tweet_auto_summary">Auto tweet when register log</string>
  	<string name="pref_tweet_auth">Cancel authentication</string>
	<string name="pref_tweet_auth_summary">Canceling authentication</string>
	<string name="pref_dialog_auth_title">Confirm</string>
	<string name="pref_dialog_auth_confirm">Cancel authentication?</string>

	<string name="tweet_title">Post tweet</string>
	<string name="tweet_alert">If you created DrinkLog with a photo, a tweet includes the photo.
	If you don\'t need to image attaching, please set via settings on top page.
	(Menu > Settings > Image attaching)</string>
	<string name="tweet_progress">tweet</string>
	
    <string name="sc_alert_title">Notify</string>
    <string name="sc_alert_sd">Please insert a SD card.</string>
    <string name="sc_alert_ok">OK</string>
    
    <string name="sc_error_title">Error</string>
    <string name="sc_error_cam">Coundn\'t launch camera</string>
    <string name="sc_error_cam_ok">OK</string>

	<string name="category_effect">Effect settings</string>
	<string name="category_display">Display settings</string>
    
    <string name="color_effect">color_effect</string>
    <string name="color_effect_title">Color effect</string>
	<string name="dialog_color_effect_title">Color effect</string>
	<string name="color_effect_summary">Set color effect</string>
	
	<string name="picture_size">picture_size</string>
	<string name="picture_size_title">Picture size</string>
	<string name="dialog_picture_size_title">Picture size</string>
	<string name="picture_size_summary">Set picture size</string>
</resources>