<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
      <PreferenceCategory android:title="@string/pref_tweet">
        <CheckBoxPreference 
        	android:key="image_attached"
            android:title="@string/pref_tweet_image"
        	android:summary="@string/pref_tweet_image_summary"
        	android:defaultValue="true"
        	>
        </CheckBoxPreference>
        
        <CheckBoxPreference 
        	android:key="auto_tweet"
            android:title="@string/pref_tweet_auto"
        	android:summary="@string/pref_tweet_auto_summary"
        	android:defaultValue="false"
        	>
        </CheckBoxPreference>
        
        <Preference 
            android:key="auth_cancel"
            android:title="@string/pref_tweet_auth"
            android:summary="@string/pref_tweet_auth_summary">
        </Preference>
	</PreferenceCategory>
</PreferenceScreen>
