<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vintage"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:layout_weight="7">
        </EditText>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/area"
            android:layout_weight="2"/>
        <Spinner
        	android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="6" />
        <Button
            android:id="@+id/date_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_select"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/place"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:layout_weight="8">
        </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:layout_weight="8">
        </EditText>
    </LinearLayout>    
    

</LinearLayout>