<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/reg_area_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/area"/>
        <Spinner
        	android:id="@+id/area_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/reg_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/type"
            android:textSize="20sp"
            android:padding="5dp"/>
        <Spinner
        	android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/reg_year_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/vintage"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
	        <EditText
    	        android:id="@+id/year"
        	    android:layout_width="0pt"
            	android:layout_height="wrap_content"
	            android:inputType="number"
    	        android:maxLength="3"
       	        android:layout_weight="9">
        	</EditText>
	        <TextView
    	        android:layout_width="0dp"
        	    android:layout_height="wrap_content"
            	android:gravity="center"
	            android:text="@string/year"
    	        android:layout_weight="1"/>
       	</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/date"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
	        <TextView
    	        android:id="@+id/date"
        	    android:layout_width="0dp"
            	android:layout_height="wrap_content"
	            android:gravity="center"
    	        android:layout_weight="8" />
        	<Button
            	android:id="@+id/date_select"
   	    	    android:background="@drawable/my_button"
	        	android:textColor="#ffffff"
        		android:paddingTop="8dp"
        		android:paddingBottom="8dp"
	            android:layout_width="0dp"
    	        android:layout_height="wrap_content"
        	    android:gravity="center"
            	android:text="@string/date_select"
            	android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/place"/>
        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20">
        </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/price"/>
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10">
        </EditText>
    </LinearLayout>    
    

</LinearLayout>