<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vintage"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/ref_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">
        </TextView>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/area"
            android:layout_weight="2"/>
        <TextView
        	android:id="@+id/ref_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/ref_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="8" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/place"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/ref_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">
        </TextView>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/ref_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="8">
        </TextView>
    </LinearLayout>    
    
</LinearLayout>