<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:layout_weight="2"/>
        <AutoCompleteTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:layout_weight="8">
        </AutoCompleteTextView>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/image"
            android:layout_weight="2"/>
        <ImageView
            android:id="@+id/cur_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/picture"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/evaluate" />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center" >
            <RatingBar
                style="?android:attr/ratingBarStyleIndicator"
                android:isIndicator="false"
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/impression" />
        <EditText
            android:id="@+id/impression"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLength="100"
            >
        </EditText>
    </LinearLayout>    
        
    <LinearLayout 
        android:id="@+id/other_display_layout"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="その他" />
        <Button
            android:id="@+id/log_other"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="その他の項目を設定"
            android:drawableRight="@android:drawable/ic_menu_more"
            >
        </Button>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/register_commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/register_commit" />
        <Button
            android:id="@+id/register_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/register_cancel" />
    </LinearLayout>
</LinearLayout>