<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ref_scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical"
        android:layout_marginLeft="5dp"
      	android:layout_marginRight="5dp">

    <LinearLayout
        android:id="@+id/ref_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70sp"
       	android:gravity="center">
        <TextView
            android:id="@+id/ref_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    
    <View android:id="@+id/ref_separator_1" 
	    android:layout_width="wrap_content" 
    	android:background="#DCDCDC" 
      	android:layout_height="1px" 
      	android:layout_marginTop="10dp">
   	</View>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageButton
            android:id="@+id/ref_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/evaluate" />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center" >
            <RatingBar
                style="?android:attr/ratingBarStyleIndicator"
                android:isIndicator="true"
                android:id="@+id/ref_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/impression" />
        <TextView
            android:id="@+id/ref_impression"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLength="100"
            />
    </LinearLayout>
    
    <View android:id="@+id/ref_separator_2" 
	    android:layout_width="wrap_content" 
    	android:background="#DCDCDC" 
      	android:layout_height="1px" 
      	android:layout_marginTop="10dp">
   	</View>
        
    <LinearLayout 
        android:id="@+id/ref_other_display_layout"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:paddingTop="15sp">
        <Button
            android:id="@+id/ref_other"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ref_other_log"
            android:drawableRight="@android:drawable/ic_menu_more"
            >
        </Button>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>